<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="16dp"
    android:background="@drawable/textview_message_others">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_label_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edition_topic_dialog"
            android:inputType="textMultiLine|textAutoCorrect|textAutoComplete|textCapSentences"
            android:maxLength="50"
            android:fontFamily="@font/nunito"
            android:scrollbars="vertical|none"
            android:textSize="16sp"
            android:textColor="@color/primary_text" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_character_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_count_edition_topic_dialog"
        android:paddingStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/nunito"
        android:layout_below="@+id/til_label_topic"
        android:textAlignment="textEnd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_character_count"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/btn_cancel_edition_topic"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito"
            android:layout_weight="1"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_edit_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/btn_save_edition_topic"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:fontFamily="@font/nunito"
            android:layout_gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>

