<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    tools:context="apptribus.com.tribus.activities.check_username.NewCheckUsernameActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar_check_username" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="451dp"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="vertical|none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout_editor_absoluteY="58dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/tv_info_check_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/tv_info_check_username"
                android:padding="10dp"
                android:text="@string/tv_info_check_username"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_info_check_username"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_info_check_username"
                    android:hint="@string/inform_your_name"
                    android:inputType="textPersonName|textCapWords"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/nunito"
                    android:maxLength="40"
                    />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/linear_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_label_name"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:elevation="2dp"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/tv_check_username"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:fontFamily="@font/nunito"/>

                <ImageView
                    android:id="@+id/iv_help"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ripple_effect_arrow_buttom"
                    android:src="@drawable/ic_help" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_info_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/btn_check_username"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:background="?attr/selectableItemBackground"
                android:padding="4dp"
                android:textAlignment="center"
                android:textSize="12sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_check_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_username"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/button_check_username"
                android:elevation="4dp"
                android:text="@string/btn_verify_username"
                android:textColor="@color/colorIcons"
                android:textSize="16sp"
                android:fontFamily="@font/nunito"/>

        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>